Resolve relative paths set in grinder.script based on the directory containing the properties file.